--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Mesuem_Java.sln"
+    "dotnet.defaultSolution": "Museum_Java.sln"
 }
